--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-weather",
   "version": "0.1.0",
+  "homepage": "https://nikaveraa-1995.github.io/react-weather/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
