--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^5.0.1",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "dom": "^0.0.3",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
