--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^5.0.1",
     "axios": "^1.8.4",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "dom": "^0.0.3",
+    "hoist-non-react-statics": "^3.3.2",
+    "immer": "^10.1.1",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-router": "^7.4.1",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
@@ -36,7 +40,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
